# xarray-specs

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
src/xarray_specs/: __init__.py  converter.py  schema.py  specs.py
test/: test_data_array_schema.py  test_dataset_schema.py  test_dtypes.py  test_model.py  test_primitives.py  test_scalar.py
